2024-08-20  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_sugar.R: Skip one more NA related test on arm64
	and macOS as failure is seen at r-universe on arm64

	* .github/workflows/macos.yaml: Add basic r-ci setup but dialed-down
	to macOS only (as Linux is covered via multiple Docker setups)

2024-08-19  Dirk Eddelbuettel  <edd@debian.org>

	* Contributing.md: Refreshed content

2024-07-30  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp-modules.Rmd (are): Add short two-sentence
	illustration following GitHub issue #1322

2024-07-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2024-07-11  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Date, Version): Release 1.0.13

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * vignettes/rmd/Rcpp.bib: Idem
        * inst/bib/Rcpp.bib: Idem
	* vignettes/pdf/*: Rebuilt

2024-07-07  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp/internal/SEXP_Iterator.h: Avoid using VECTOR_PTR
	* inst/include/Rcpp/vector/Subsetter.h: Avoid using STRING_PTR
	* inst/include/RcppCommon.h: Include compatibility defines
	* src/barrier.cpp: Avoid using {STRING/VECTOR}_PTR
	* inst/include/Rcpp/r/compat.h: Include compatibility defines

2024-07-05  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp/Environment.h: Drop support for UserDefinedDatabase
	[ merged 2024-07-22 after release of Rcpp 1.0.13 ]

	* inst/include/Rcpp/Language.h: Avoid using SET_TYPEOF
	* inst/include/Rcpp/Pairlist.h: Idem
	* inst/include/Rcpp/r_cast.h: Idem
	[ merged 2024-07-24 after release of Rcpp 1.0.13 ]

2024-06-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2024-06-11  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp/internal/r_vector.h: Use template specializations to